<?xml version="1.0"?>
<package>
  <name>kuka_estop</name>
  <version>0.0.1</version>
  <description>Software Emergency Stop for the Kuka Robot</description>

  <author email="dln.finis@gmail.com">Diego Leon</author>
  <maintainer email="dln.finis@gmail.com">Diego Leon</maintainer>

  <license>BSD</license>

  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>move_base_msgs</build_depend>


  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>move_base_msgs</run_depend>
  
</package>
